# dokuwiki-migrator

./: .gitignore  README.md  main.py  migrator.py  pyproject.toml
migrator/: bookstack.py  dokuwiki.py  migrator.py  shared.py
migrator/bookstack/: __init__.py  api.py  migrator.py
migrator/dokuwiki/: __init__.py  api.py  migrator.py
migrator/wikijs/: __init__.py  api.py  migrator.py  queries.graphql
migrator/wikijs/graphql_client/: __init__.py  client.py  create_folder.py  create_page.py  delete_page.py  enums.py  fragments.py  input_types.py  list_folders.py  list_pages.py  update_page.py
