[project]
name = "wiki-migrate"
version = "0.1.0"
description = "A tool to migrate a DokuWiki installation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click",
  "toml",
  "pydantic",
  "requests",
  "beautifulsoup4"
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "types-requests>=2.32.0.20250306",
    "types-toml>=0.10.8.20240310",
]

[tool.mypy]
files = "."